# pcm

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  cc_box.c  cc_box_api.h  dcqcn.c  dcqcn_int.c  dcqcn_params.h  main.c  reno.c  smartt.c  swift.c
HTSIM_spcl-patch/: CMakeLists.txt  atlahs_event.h  atlahs_htsim_api.cpp  atlahs_htsim_api.h  fairpullqueue.cpp  logsim-interface.cpp  uec.cpp  uec.h  uec_mp.h
algorithms/: .clang-format  CMakeLists.txt  bitmap_lb.c  cubic.c  cubic.yaml  dctcp.c  dctcp.yaml  fabric.yaml  momentum.c  newreno.c  newreno.yaml  nscc.c  nscc.yaml  ops_lb.c  ops_lb.yaml  reps.c  smartt.c  smartt.yaml  strack.c  strack_light.c  strack_light.yaml  swift.c  swift.yaml  tcp_utils.c  tcp_utils.h  uec_dctcp.c  uec_dctcp_v2.c
algorithms/v2/: cubic_v2.c  cubic_v2.yaml  dctcp_v2.c  newreno_v2.c  newreno_v2.yaml  nscc_v2.c  nscc_v2.yaml  ops_lb_v2.c  ops_lb_v2.yaml  reps_v2.c  smartt_v2.c  smartt_v2.yaml  strack_light_v2.c  strack_light_v2.yaml  strack_v2.c  strack_v2.yaml  swift_v2.c  swift_v2.yaml
apps/htsim/: CMakeLists.txt  htsim_pcm_src.hpp  incast_2_1MB.cm  lb_core.json  lb_incast.json  permutation_128_1MB.cm  plot_cwnd.py  single-flow.cm
apps/htsim/uet-htsim-patch/: CMakeLists.txt  uec_mp.h
apps/htsim/uet-htsim-patch/datacenter/: CMakeLists.txt
apps/htsim_atlahs/: CMakeLists.txt  all_algos_incast.json  batch_simulations_goal.py  pcm_goal_incast_16_nodes.json  pcm_goal_incast_4_nodes.json
cc-study/: README.md  reno.c  swift.c
hac/: CMakeLists.txt  codegen.py
include/: pcm_vm.hpp  pcmh.h  prof.h
pcc/: Makefile  api.md
pcc/app/: Makefile  algo_utils.h  dctcp.c  main.c  reno.h  reno_accumulated.c  reno_standard.c  smartt.c  smartt.h  swift.c  swift.h  tcp.h
pcc/include/: pcc.h  pcm.h
pcc/src/: algo_conf.c  device.c  driver.c  driver.h  flow.c  impl.h  pcc_sw_ctx.c  pcmc_impl.c  pcmh_impl.c  util.h
pcc/test/: Makefile  main.c  reno.c  reno.h
pcm/: CMakeLists.txt  Makefile  README.md  api_notes.md  build.py  perftest_run.sh
pcm/HAC/: CMakeLists.txt  EnumeratePaths.cpp  README.md  ReplaceCallWithLoad.cpp  hac
pcm/algorithms/: CMakeLists.txt  algo_utils.h  bitmap_lb.c  bitmap_lb_v2.c  bitmap_lb_v2.yaml  cubic.c  cubic.yaml  dcqcn.c  dcqcn.h  dcqcn.yaml  dcqcn_pcmc.c  dctcp.c  dctcp.h  dctcp.yaml  dctcp_pcmc.c  eaild.c  eaild.yaml  eqds.c  eqds.yaml  fabric.yaml  fabric_params.h  momentum.c  momentum.yaml  newreno.c  newreno.h  newreno_pcmc.c  nscc.c  nscc.yaml  ops_lb.c  ops_lb.yaml  reno_accumulated.c  reno_standard.c  reps.c  reps.yaml  smartt.c  smartt.h  smartt_pcmc.c  strack.c  strack.yaml  strack_light.c  (+11 more)
pcm/algorithms/backup/: swift.h  swift_pcmc.c
pcm/algorithms/untested/: reno_accumulated.c
pcm/algorithms/v2/: cubic_v2.c  dctcp_v2.yaml  newreno_v2.c  nscc_v2.c  nscc_v2.yaml  ops_lb_v2.c  reps_v2.c  reps_v2.yaml  strack_light_v2.c  strack_v2.c  strack_v2.yaml
pcm/algos/: tcp.h
pcm/analysis/: check_pathlens.sh  perftest_run.sh  plot_cyc_and_inst.py
pcm/app/: app_traffic_gen.c  app_traffic_gen.h  dcqcn.c  dctcp.c  main.c  perftest_run.sh  smartt.c  swift.h
pcm/apps/ccp/: Makefile  ccp.c  ccp_priv.h  libccp_setup.sh  machine.c  run_experiments.py  testbench_scaling.cpp  testbench_with_portus.cpp
pcm/apps/htsim/: CMakeLists.txt  README.md  all_algos_core.json  all_algos_incast.json  batch_simulations.py  htsim_app.cpp  htsim_flow.c  htsim_flow.h  htsim_pcm_cwnd_parser.py  htsim_pcm_device.cpp  htsim_pcm_device.hpp  htsim_pcm_lb.hpp  htsim_pcm_nic.cpp  htsim_pcm_nic.hpp  htsim_pcm_src.hpp  htsim_uec_cwnd_parser.py  lb_core.json  lb_incast.json  one_flow.cm  plot_cwnd.py
pcm/apps/htsim_atlahs/: CMakeLists.txt  README.md  all_algos_core.json  all_algos_incast.json  batch_simulations.py  batch_simulations_goal.py  batch_simulations_tm.py  htsim_app_atlahs.cpp  htsim_pcm_lb.hpp  htsim_pcm_src.hpp  lb_core.json  lb_incast.json  pcm_cc_config.json  pcm_goal_allreduce.json  pcm_goal_incast_16_nodes.json  pcm_goal_incast_4_nodes.json  pcm_goal_ring.json
pcm/apps/htsim_atlahs/example_allreduce/: nscc_config.json  pcm_cc_config.json  pcm_cc_config_1.json  tree1.topo
pcm/apps/htsim_atlahs/example_incast/: 4_nodes_incast.goal  pcm_cc_config_0.json  pcm_cc_config_1.json  pcm_cc_config_2.json  pcm_cc_config_3.json  pcm_cc_config_4.json  tree16.topo  tree4.topo
pcm/apps/htsim_atlahs/example_ring/: 16_nodes_tag_large_diff.goal  nscc_config.json  pcm_cc_config_2.json
pcm/apps/htsim_atlahs/goal_file_examples/: 16_nodes.goal  16_nodes_tag.goal  16_nodes_tag_large.goal
pcm/apps/htsim_v2/: CMakeLists.txt  all_algos_core.json  all_algos_incast.json  batch_simulations.py  htsim_app_v2.cpp  htsim_pcm_lb.hpp  htsim_pcm_src.hpp  lb_core.json
pcm/apps/traffic_gen/: CMakeLists.txt  cwnd_parser.py  main.c  traffic_gen.c  traffic_gen.h
pcm/hac/: README.md  codegen.py  codegen_template.yaml  codegen_v2.py  hac  test.c  test_enumerate_pass.sh
pcm/include/: network.h  pcm.h  pcm_log.h  pcm_network.h  pcm_v2.hpp  pcm_vm.hpp  pcmc.h  pcmh.h  prof.h  timing.hpp
pcm/misc/: lwlog.h
pcm/src/: algo_conf.c  device.c  flow.c  flow_plugin_registry.c  htsim_flow.c  htsim_flow.h  impl.h  lwlog.h  pcmc_impl.c  pcmh_impl.c  prof.h  pthread_flow.c  pthread_flow.h  util.h
pcm/src/htsim/: htsim_flow.c  htsim_flow.h  htsim_pcm_device.cpp  htsim_pcm_device.hpp  htsim_pcm_pacer.cpp  htsim_pcm_pacer.hpp  htsim_pcm_packet.cpp  htsim_pcm_packet.hpp  htsim_pcm_src.bak  htsim_pcm_src.cpp  htsim_pcm_src.hpp
pcm/src/v2/: impl.cpp  impl.hpp  test.cpp
pcm/yaml/: pcmc_generator.py  pcmc_yaml2src.py  swift_algorithm_config.yaml
uec-htsim-patch/: CMakeLists.txt  uec.cpp  uec.h
uet-htsim-patch/: CMakeLists.txt  uec.cpp  uec.h
v0-api/: Makefile  cc_box.c  cc_box_api.h  dcqcn.c  dctcp.c  main.c  swift.c
v1-api/: Makefile
v1-api/include/: dummy_datapath.h
v1-api/src/: dummy_datapath_impl.c  dummy_datapath_impl.h  pcc_sw_ctx.h  slist.h
v1-api/test/: main.c  reno.c
v2-api/: pcm_network.h
v2-api/apps/htsim/: all_algos_core.json  (+8 more)
v2-api/hac/: codegen.py
v2-api/src/: CMakeLists.txt  flow_plugin_registry.c  impl.h  pcmc_impl.c  pthread_flow.c
(+8 files in other folders)
